# ckanext-iso19115

./: .gitignore  .gitmodules  CHANGELOG.md  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/iso19115/: *scratch*  builder.py  cli.py  config_declaration.yaml  formatter.py  helpers.py  interfaces.py  plugin.py  presets.yaml  types.py  utils.py  views.py
ckanext/iso19115/assets/: iso19115-script.js  script.js  style.css  webassets.yml
ckanext/iso19115/converter/: __init__.py  cit.py  gco.py  gex.py  gml.py  helpers.py  lan.py  mac.py  mas.py  mcc.py  mco.py  mdb.py  mdq.py  mex.py  mmi.py  mpc.py  mrd.py  mri.py  mrl.py  mrs.py  srv.py
ckanext/iso19115/logic/: action.py
ckanext/iso19115/schematron/: cit.xml  dqm.xml  gex.xml  mdb.xml  mmi.xml  mrc.xml  mri.xml  srv.xml
ckanext/iso19115/templates/iso19115/: validate.html
ckanext/iso19115/tests/: conftest.py  mdb.pkl  mds.pkl  test_converter.py  test_plugin.py
ckanext/iso19115/tests/examples/: basic2.xml  cit_invalid.xml  cit_valid.xml  namespaces.xml
ckanext/iso19115/tests/examples/v3.2/: basic.xml  complex.xml  identification.xml  identification_no_category.xml  identification_no_geo.xml  minimal.xml  sch_no_creation_date.xml  sch_no_default_locale.xml  sch_no_root.xml  sch_non_dataset_scope.xml
ckanext/iso19115/tests/v3.2/: test_utils.py
ckanext/iso19115/types/: __init__.py  base.py  cit.py  gco.py  gcx.py  gex.py  gml.py  lan.py  mac.py  mas.py  mcc.py  mco.py  mdb.py  mdq.py  mex.py  mmi.py  mpc.py  mrc.py  mrd.py  mri.py  mrl.py  mrs.py  msr.py  srv.py
namespaces/19115/-3/gmw/1.0/: gmlWrapperTypes2014.xsd
schematron/: mco.xml  mdq.xml  mex.xml  mrd.xml
serialized/: metadata.pickle
(+12 files in other folders)
