[metadata]
name = ckanext-iso19115
version = 0.0.20
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DataShades/ckanext-iso19115
author = Sergey Motornyuk
author_email = sergey.motornyuk@linkdigital.com.au
license = AGPL
classifiers =
	    Development Status :: 4 - Beta
	    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	    Programming Language :: Python :: 3.7
	    Programming Language :: Python :: 3.8
	    Programming Language :: Python :: 3.9
	    Programming Language :: Python :: 3.10
keywords =
	 CKAN

[options]
python_requires = >= 3.7
install_requires =
		 xmlschema
		 faker
		 exrex
		 ckanapi
		 typing_extensions
		 pycountry
packages = find:
namespace_packages = ckanext
include_package_data = True

[options.entry_points]
ckan.plugins =
	     iso19115 = ckanext.iso19115.plugin:Iso19115Plugin

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/iso19115/i18n/ckanext-iso19115.pot
width = 80

[init_catalog]
domain = ckanext-iso19115
input_file = ckanext/iso19115/i18n/ckanext-iso19115.pot
output_dir = ckanext/iso19115/i18n

[update_catalog]
domain = ckanext-iso19115
input_file = ckanext/iso19115/i18n/ckanext-iso19115.pot
output_dir = ckanext/iso19115/i18n
previous = true

[compile_catalog]
domain = ckanext-iso19115
directory = ckanext/iso19115/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning

addopts = --ckan-ini test.ini
testpaths = ckanext/iso19115/tests
